<resources>
    <string name="app_name">MobileTaskPlanner</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="this_is_a_required_field">This is a required field.</string>
    <string name="email_wrong_info">Email in wrong format</string>
    <string name="username_wrong_info">Username should have at least 3 characters</string>
    <string name="password_wrong_info">Password should not have any special characters (~#^|$%&amp;*!), should be of length >= 5, with at least one capital letter and at least one digit</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="show_past_obligations">Show past obligations</string>
    <string name="low_priority_task">Low</string>
    <string name="mid_priority_task">Mid</string>
    <string name="high_priority_task">High</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="enter_start_time">Enter start time</string>
    <string name="enter_end_time">Enter end time</string>
    <string name="title_is_required">Title is required</string>
    <string name="time_is_required">Time is required</string>
    <string name="priority_is_required">Priority is required</string>
    <string name="time_is_already_taken">Time is already taken</string>
    <string name="end_time_must_be_after_start_time">End time must be after start time</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Log out</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update_password">Update password</string>
    <string name="invalid_old_password">Invalid old password</string>
    <string name="invalid_new_password">Invalid new password</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="empty_fields">Empty fields!</string>
    <string name="passwords_cannot_be_the_name">Passwords cannot be the same!</string>
    <string name="give_up">Give up</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="daily_plan">Daily plan</string>
    <string name="calendar">Calendar</string>

</resources>