<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentDateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="April 16. 2023." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_past_obligations"
                android:layout_weight="1"
                android:textAlignment="center"
                />

            <CheckBox
                android:id="@+id/show_past_tasks_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/black">

            <TextView
                android:id="@+id/plan_task_priority_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/low_priority_task"
                android:background="@color/task_priority_low"
                android:paddingVertical="5dp"
                android:layout_marginEnd="2dp">
            </TextView>
            <TextView
                android:id="@+id/plan_task_priority_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/mid_priority_task"
                android:background="@color/task_priority_medium"
                android:paddingVertical="5dp"
                >
            </TextView>
            <TextView
                android:id="@+id/plan_task_priority_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/high_priority_task"
                android:background="@color/task_priority_high"
                android:paddingVertical="5dp"
                android:layout_marginStart="2dp">
            </TextView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskListRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:background="@color/date_background_color"
            />




        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="daily plan" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_plus" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>